# SimpleSql

./: README.md  __init__.py  pyproject.toml
simplesql/: __init__.py
